--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -91,7 +91,7 @@
                 <div *ngIf="i<2" style="margin-bottom: 40px;">
                     <label [for]="i">
                         <mat-card class="mat-elevation-z0">
-                            Imagen {{i+1}}
+                            Foto final {{i+1}}
                             <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'"
                                 class="pointer" />
                             <mat-card-actions *ngIf="imgUpload" align="end">
