--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -1,21 +1,21 @@
 <div class="body-container" *ngIf="auth.user$ | async as user">
   <ng-container *ngIf="user.role == 'Administrador'">
-    <button type="file" aria-label="add" mat-button class="btn-add" (click)="openDialog('create')">
+    <button type="file" aria-label="add" mat-button class="ms-dialog-button" (click)="openDialog('create')">
       <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
       CREAR
     </button>
-    <button type="file" aria-label="add" mat-button class="btn-add" (click)="uploadFileDialog()">
+    <button type="file" aria-label="add" mat-button class="ms-dialog-button" (click)="uploadFileDialog()">
       <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
       LOTE
     </button>
 
-    <button aria-label="add" mat-button class="btn-add" (click)="downloadXlsx(historyDataSource.data)"
+    <button aria-label="add" mat-button class="ms-dialog-button" (click)="downloadXlsx(historyDataSource.data)"
       [disabled]="historyDataSource.data.length < 1">
       <mat-icon aria-label="agregar" class="icon-add">download</mat-icon>
       DESCARGAR
     </button>
 
-    <button aria-label="add" mat-button class="btn-add" (click)="generatePDF()"
+    <button aria-label="add" mat-button class="ms-dialog-button" (click)="openDialog('report')"
       [disabled]="historyDataSource.data.length < 1">
       <mat-icon aria-label="agregar" class="icon-add">description</mat-icon>
       REPORTE
@@ -197,10 +197,6 @@
               <button class="w3-small" mat-menu-item (click)="openDialog('image', element, i)">
                 <mat-icon>add_photo_alternate</mat-icon>
                 Imágenes
-              </button>
-              <button class="w3-small" mat-menu-item (click)="generatePDF(element)">
-                <mat-icon>add_photo_alternate</mat-icon>
-                PDF
               </button>
             </mat-menu>
 
