--- a/src/app/main/pages/quality/configurations/configurations.component.html
+++ b/src/app/main/pages/quality/configurations/configurations.component.html
@@ -15,16 +15,20 @@
             <div style="border: 10px;"></div>
 
             <mat-card class="mat-elevation-z0">
-                <div class="container-diffusion">
-                    <div *ngFor="let control of listDiffusionForm.controls; let i=index">
+                <div class="container-diffusion"*ngIf="broadcast$ |async as broadcastList">
+                    <div *ngFor="let broadcast of broadcastList; let i=index">
                         <mat-card-content>
                             <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 5px;">
                                 <mat-card-header>
-                                    <mat-card-title>
-                                        <span> Lista de difusión {{i + 1}}</span>
-                                        <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save"
+                                    <mat-card-title class="container-diffusion__title"> 
+                                        <span class="container-diffusion__title--name"> Lista de {{broadcast.name}} </span>
+                                        <!-- <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save"
                                          (click)="saveListSpecialist()">
                                             GUARDAR
+                                        </button> -->
+                                        <button mat-icon-button aria-label="deletelistResult"
+                                         (click)="deleteListBroadcast(broadcast)" >
+                                            <mat-icon style="color: #FF2D2D; ">delete</mat-icon>
                                         </button>
                                     </mat-card-title>
                                 </mat-card-header>
@@ -35,24 +39,25 @@
                                 <mat-card-header class="container-expansion1__content-card--header">
                                     <mat-form-field>
                                         <mat-label>Escribir</mat-label>
-                                        <input type="text" matInput placeholder="Escribir" [formControl]="listDiffusionForm.controls[i]" 
-                                        (keyup.enter)="addListResponsibleArea()"  [errorStateMatcher]="matcher" autocomplete="off">
-                                        <button mat-button *ngIf="listDiffusionForm.value" matSuffix mat-icon-button aria-label="clearResult" 
-                                        (click)="listDiffusionForm.reset()">
+                                        <input type="text" matInput placeholder="Escribir" [formControl]="listDiffusionControl" 
+                                        (keyup.enter)="addListDiffusion(broadcast,i+1)"  [errorStateMatcher]="matcher" autocomplete="off">
+                                        <button mat-button *ngIf="listDiffusionControl.value" matSuffix mat-icon-button aria-label="clearResult" 
+                                        (click)="listDiffusionControl.reset()">
                                             <mat-icon>close</mat-icon>
                                         </button>
                                         <mat-hint>Presione ENTER para agregar</mat-hint>
-                                        <mat-error *ngIf="listDiffusionForm.hasError('required')">
+                                        <mat-error *ngIf="listDiffusionControl.hasError('required')">
                                             El campo es <strong>Requerido</strong>
                                         </mat-error>
                                     </mat-form-field>
                                 </mat-card-header>
                                 <mat-card-content class="container-expansion1__content-card-content">
-                                    <div role="list" *ngFor="let result of listProblemTypeArray;let i=index">
+                                    <div role="list" *ngFor="let item of broadcast['emailList'] ;let j=index">
                                         <div class="item-list">
-                                            <span>{{result.problemType}}</span>
+                                            <span>{{item}}</span>
                                             <span>
-                                                <button mat-icon-button aria-label="deletelistResult" (click)="deleteListSpecialist(i)" >
+                                                <button mat-icon-button aria-label="deletelistResult" 
+                                                (click)="updateBrocastListEmail(broadcast, item)" >
                                                     <mat-icon style="color: #828282">delete</mat-icon>
                                                 </button>
                                             </span>
@@ -60,11 +65,14 @@
                                     </div>
                                 </mat-card-content>
                             </mat-card>                
-                        </mat-card-content>    
+                        </mat-card-content>                           
+                        
                     </div>
+
                 </div>
                 
-                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save" (click)="addListDiffusion()">
+                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save"
+                 (click)="addDiffusion()">
                     AGREGAR
                 </button>          
 
