--- a/src/app/main/pages/spares/replacements/replacements.component.html
+++ b/src/app/main/pages/spares/replacements/replacements.component.html
@@ -15,38 +15,44 @@
     </div>
     <div class="body-container">
         <div *ngIf="replacement$ |async">
-            <table mat-table [dataSource]="replacementDataSource" class="mat-elevation-z8">
+            <table mat-table [dataSource]="replacementDataSource" matSort (matSortChange)="sortData($event)"
+                class="mat-elevation-z8">
 
-                <ng-container matColumnDef="date">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell"> Fecha </th>
+                <ng-container matColumnDef="createdAt">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell"> Fecha </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{(element.createdAt.seconds * 1000) |
                         date : 'dd/MM/yy'}}
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="replacedPart">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell"> N/P Reemplazado </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell"> N/P Reemplazado </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.replacedPart}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="currentPart">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell"> N/P Actual </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell"> N/P Actual </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.currentPart}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="description">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell"> Descripción </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell"> Descripción </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="kit">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell"> Kit </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell"> Kit </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.kit ? 'Si':'No'}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="support">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell"> support </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell"> Support </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.support ? 'Si':'No'}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="createdBy">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
+                    <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="actions" stickyEnd>
@@ -77,7 +83,7 @@
                 <tr mat-row *matRowDef="let row; columns: replacementDisplayedColumns;"></tr>
             </table>
         </div>
-        <mat-paginator #replacementPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+        <mat-paginator #replacementPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
         </mat-paginator>
     </div>
 </div>
