--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.html
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.html
@@ -3,9 +3,9 @@
         <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">verified</mat-icon>
         <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Revisión de repuestos</h1>
 
-        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
+        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".csv"
             id="fileInput2">
-        <button type="file" aria-label="add" mat-button class="btn-add" accept=".csv,.xlsx"
+        <button type="file" aria-label="add" mat-button class="btn-add" accept=".csv"
             (click)="fileInput2.click()">
             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
             ADJUNTAR SIS
