--- a/src/app/main/pages/spares/summary/summary.component.html
+++ b/src/app/main/pages/spares/summary/summary.component.html
@@ -14,12 +14,14 @@
         <ng-container *ngIf="summary$ | async; else default">
             <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
             <div style="overflow: auto;" class="mat-elevation-z4">
-                <table mat-table [dataSource]="summaryDataSource" matSort class="mat-elevation-z8">
+                <table mat-table [dataSource]="summaryDataSource" matSort (matSortChange)="sortData($event)"
+                    class="mat-elevation-z8">
 
-                    <ng-container matColumnDef="date">
+                    <ng-container matColumnDef="createdAt">
                         <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Fecha </th>
                         <td mat-cell *matCellDef="let element" class="table__cell">
-                            <span *ngIf="element.date?.seconds; else noAvailability">{{(element.date.seconds * 1000) |
+                            <span *ngIf="element.createdAt?.seconds; else noAvailability">{{(element.createdAt.seconds *
+                                1000) |
                                 date:"dd/MM/yyyy"}}</span>
                             <ng-template #nodate>{{'---'}}</ng-template>
                         </td>
@@ -105,6 +107,11 @@
                         </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="createdBy">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell"> Usuario </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.createdBy.name}} </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="actions" stickyEnd>
                         <th mat-header-cell *matHeaderCellDef class="table__cell">
                             Acciones
@@ -120,7 +127,7 @@
                     <tr mat-row *matRowDef="let row; columns: summaryDisplayedColumns;"></tr>
                 </table>
             </div>
-            <mat-paginator #summaryPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+            <mat-paginator #summaryPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
             </mat-paginator>
         </ng-container>
         <ng-template #default>
