--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -36,44 +36,44 @@
   </mat-form-field>
 
   <div class="container-table" *ngIf="evaluation$ |async">
-    <table mat-table [dataSource]="historyDataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="historyDataSource" matSort (matSortChange)="sortData($event)" class="mat-elevation-z8">
 
       <ng-container matColumnDef="otMain">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">MAIN</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">MAIN</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.otMain ? element.otMain : '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="otChild">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">CHILD</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">CHILD</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.otChild ? element.otChild : '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Posición</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Posición</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.position ? element.position : '---'}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="partNumber">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">NP</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">NP</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.partNumber ? element.partNumber : '---'}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Descripción</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Descripción</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description ? element.description :
           '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="quantity">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Cantidad</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Cantidad</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.quantity ? element.quantity : '---'}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="internalStatus">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Estado</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Estado</th>
         <td mat-cell *matCellDef="let element" class="table__cell">
           <button mat-button (click)="showImprovementEntry(element)" [ngClass]="{'btn-state-registered': element.internalStatus==='registered'
                            ,'btn-state-progress': element.internalStatus==='processed'
@@ -89,82 +89,82 @@
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef class="table__cell"> Atención </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell"> Atención </th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.status ? element.status : '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="wof">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">WOF</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">WOF</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.wof ? element.wof : '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="task">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Tarea</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Tarea</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.task ? element.task : '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="observations">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Observaciones</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Observaciones</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.observations ? element.observations :
           '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="workshop">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Taller</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Taller</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workshop ? element.workshop : '---'}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha de solicitud</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Fecha de solicitud</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{(element.createdAt.seconds * 1000) | date :
           'dd/MM/yy hh:mm:ss'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="processAt">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha de proceso</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Fecha de proceso</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{(element.processAt?.seconds * 1000) | date :
           'dd/MM/yy hh:mm:ss'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="finalizedAt">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha de finalizado</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Fecha de finalizado</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{(element.finalizedAt?.seconds * 1000) | date :
           'dd/MM/yy hh:mm:ss'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="result">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Resultado</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Resultado</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.result ? element.result : '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="kindOfTest">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Ensayo</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Ensayo</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.kindOfTest ? element.kindOfTest : '---'}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="comments">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Comentarios</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Comentarios</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.comments ? element.comments : '---'}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="createdBy">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Inspector</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Inspector</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.createdBy ? (element.createdBy.name ?
           element.createdBy.name : element.createdBy) :
           '---'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="processDate">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha Proceso</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Fecha Proceso</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{(element.processDate.seconds * 1000) | date :
           'dd/MM/yy'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="finishedDate">
-        <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha Cierre</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Fecha Cierre</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{(element.finishedDate.seconds * 1000) | date :
           'dd/MM/yy'}} </td>
       </ng-container>
