--- a/src/app/main/pages/quality/configurations/configurations.component.scss
+++ b/src/app/main/pages/quality/configurations/configurations.component.scss
@@ -162,7 +162,19 @@
     }
 
 }
-
+mat-accordion .mat-expansion-panel {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+    
+.mat-expansion-panel-header:not([aria-disabled="true"]) {
+    margin-bottom: 4px;
+    box-sizing: border-box;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
 
 /* 
 ##Dispositivo = Tablets de baja resolucion y telefnos Mobiles (horizontal)
