--- a/src/app/main/pages/quality/internal-events/internal-events.component.html
+++ b/src/app/main/pages/quality/internal-events/internal-events.component.html
@@ -120,11 +120,11 @@
                         <div >
                             <input #fileInput2 style="display: none" type="file" 
                                    id="fileInput2"
-                                   (change)="uploadFiles($event)" accept=".xls,.xlsx"
+                                   (change)="uploadFiles($event)" accept="*"
                                    >
                                    <br>
                             <button type="file" aria-label="add" mat-button class="container-form__uploadXlx--btn-add"
-                                    accept="." 
+                                    accept="*" 
                                 (click)="fileInput2.click()">
                                 <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
                                 ADJUNTAR 
