--- a/src/app/main/pages/quality/external-events/external-events.component.scss
+++ b/src/app/main/pages/quality/external-events/external-events.component.scss
@@ -86,7 +86,7 @@
     max-width: 500px;
     font-weight: 200;
     height: 300px;
-    border: 2px dashed #f16624;
+    border: 2px dashed #6200ee;
     border-radius: 5px;
     background: white;
     margin: 10px 0;
@@ -94,7 +94,7 @@
    
 }
 .dropzone.hovering {
-    border: 2px solid #f16624;
+    border: 2px solid #6200ee;
     color: #dadada !important;
 }
 .dropzone .file-label {
