--- a/src/app/main/pages/quality/configurations/configurations.component.html
+++ b/src/app/main/pages/quality/configurations/configurations.component.html
@@ -92,7 +92,7 @@
             <mat-card class="mat-elevation-z0">
                 <div class="container-diffusion">
 
-                    <div >
+                   <!--  <div >
                         <mat-card-content>
                             <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 5px;">
                                 <mat-card-header>
@@ -108,25 +108,27 @@
                             
                             <mat-card class="mat-elevation-z0 container-expansion1__content-card">
                                 <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+                                
                                 <mat-card-header class="container-expansion1__content-card--header">
-                                    <mat-form-field>
-                                        <mat-label>Escribir</mat-label>
-                                        <input type="text" matInput placeholder="Escribir" [formControl]="listSpecialistControl" 
-                                        (keyup.enter)="addListSpecialist()"  [errorStateMatcher]="matcher" autocomplete="off">
-                                        <button mat-button *ngIf="listSpecialistControl.value" matSuffix mat-icon-button 
-                                        aria-label="clearResult" (click)="listSpecialistControl.reset()">
-                                            <mat-icon>close</mat-icon>
-                                        </button>
-                                        <mat-hint>Presione ENTER para agregar</mat-hint>
-                                        <mat-error *ngIf="listSpecialistControl.hasError('required')">
-                                            El campo es <strong>Requerido</strong>
-                                        </mat-error>
+                                    <mat-form-field color="primary" class="w3-small w3-margin-bottom w3-block" >
+                                        <mat-label>Escribir...</mat-label>
+                                        <input [formControl]="entrySpecialistControl" matInput type="text" [matAutocomplete]="autoSpecialist"
+                                          placeholder="Escriba..." autocomplete="off">
+                                        <mat-autocomplete #autoSpecialist="matAutocomplete" 
+                                          (optionSelected)="selectedEntrySpecialist($event)"
+                                          >
+                                          <mat-option *ngFor="let product of entrySpecialist$ | async" style="font-size: 12px;" [value]="product">
+                                            {{product.name}}</mat-option>
+                                        </mat-autocomplete>
+                                        <mat-hint>Escriba y seleccione un producto</mat-hint>
+                                        <mat-error>* Campo requerido</mat-error>
                                     </mat-form-field>
+
                                 </mat-card-header>
                                 <mat-card-content class="container-expansion1__content-card-content">
                                     <div role="list" *ngFor="let result of listSpecialistArray;let i=index">
                                         <div class="item-list">
-                                            <span>{{result.specialist}}</span>  
+                                            <span>{{result.name}}</span>  
                                             <span>
                                                 <button mat-icon-button aria-label="deletelistResult" 
                                                         (click)="deleteListSpecialist(i)" >
@@ -138,43 +140,57 @@
                                 </mat-card-content>
                             </mat-card>                
                         </mat-card-content>    
-                    </div>
+                    </div> -->
 
                     <div >
-                        <mat-card-content>
+                        <mat-card-content class="container-expansion2">
                             <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 5px;">
                                 <mat-card-header>
                                     <mat-card-title class="container-title">
-                                        <span> Areas responsables </span>
-                                        <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save"
-                                         (click)="saveListResponsibleArea()">
-                                            GUARDAR
-                                        </button>
+                                        <span> Areas responsables </span>                                        
                                     </mat-card-title>
                                 </mat-card-header>
                             </mat-card>
+
+                            <div class="container-expansion2__container-form" >
+                                <form [formGroup]="areaForm" class="container-expansion2__form"
+                                    (click)="saveResponsibleArea()"
+                                    >              
+               
+                                    <mat-form-field  class="container-expansion2__form--input"
+                                        appearance="outline">
+                                        <mat-label>Area responsable</mat-label>
+                                        <input type="text" autocomplete="off" formControlName="name"  placeholder="Escribe..."
+                                        matInput  />
+                                        <mat-error>* Campo requerido</mat-error>
+                                    </mat-form-field>
+
+                                    <mat-form-field class="container-expansion2__form--input"
+                                        appearance="outline">
+                                        <mat-label>Correo</mat-label>
+                                        <input type="text" autocomplete="off" formControlName="email" placeholder="Escribe..."
+                                        matInput />
+                                        <mat-error>* Campo requerido</mat-error>
+                                    </mat-form-field>
+
+                                    <button type="submit" aria-label="saveDataDifusion" mat-button class="container-expansion2__form--btn"
+                                        >
+                                            GUARDAR
+                                    </button>
+                    
+                                </form>
+                            </div>
                             
-                            <mat-card class="mat-elevation-z0 container-expansion1__content-card">
+                            <mat-card class="mat-elevation-z0 container-expansion2__content-card">
                                 <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
                                 <mat-card-header class="container-expansion1__content-card--header">
-                                    <mat-form-field>
-                                        <mat-label>Escribir</mat-label>
-                                        <input type="text" matInput placeholder="Escribir" [formControl]="listResponsibleAreasControl" 
-                                        (keyup.enter)="addListResponsibleArea()"  [errorStateMatcher]="matcher" autocomplete="off">
-                                        <button mat-button *ngIf="listResponsibleAreasControl.value" matSuffix mat-icon-button aria-label="clearResult" 
-                                        (click)="listResponsibleAreasControl.reset()">
-                                            <mat-icon>close</mat-icon>
-                                        </button>
-                                        <mat-hint>Presione ENTER para agregar</mat-hint>
-                                        <mat-error *ngIf="listResponsibleAreasControl.hasError('required')">
-                                            El campo es <strong>Requerido</strong>
-                                        </mat-error>
-                                    </mat-form-field>
+
                                 </mat-card-header>
                                 <mat-card-content class="container-expansion1__content-card-content">
                                     <div role="list" *ngFor="let result of listResponsibleAreasArray;let i=index">
                                         <div class="item-list">
-                                            <span>{{result.responsable}}</span>
+                                            <span>{{result.name}}</span>
+                                            <span>{{result.email}}</span>
                                             <span>
                                                 <button mat-icon-button aria-label="deletelistResult" (click)="deleteListResponsibleArea(i)" >
                                                     <mat-icon style="color: #828282">delete</mat-icon>
@@ -194,3 +210,8 @@
 
 </div>
 
+
+<div *ngIf="scanValidation$ | async as prueba">
+    {{prueba | json}}
+    
+</div>
