--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -9,7 +9,7 @@
       <mat-card-content>
         <mat-card-title class="text-menu-title-user">{{item.name}}</mat-card-title>
         <mat-card-subtitle class="text-menu-title-role">{{item.role}}</mat-card-subtitle>
-        <mat-card-subtitle class="text-menu-title-version">{{authService.version}}</mat-card-subtitle>
+        <mat-card-subtitle class="text-menu-title-version">{{version$ | async}}</mat-card-subtitle>
       </mat-card-content>
     </mat-card>
     <hr class="hr-line">
