--- a/src/app/main/pages/quality/internal-events/internal-events.component.html
+++ b/src/app/main/pages/quality/internal-events/internal-events.component.html
@@ -35,7 +35,7 @@
 
                         <mat-form-field appearance="outline" id="result" class="container-form__work--input">
                             <mat-label>Componente</mat-label>
-                            <input matInput type="text" placeholder="Nro de parte" formControlName="component" />
+                            <input matInput type="text" placeholder="Componente" formControlName="component" />
                             <mat-error *ngIf="internalForm.controls['component'].errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
