--- a/src/app/main/pages/quality/configurations/configurations.component.html
+++ b/src/app/main/pages/quality/configurations/configurations.component.html
@@ -144,25 +144,28 @@
 
                     <div >
                         <mat-card-content class="container-expansion2">
-                            <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 5px;">
-                                <mat-card-header>
-                                    <mat-card-title class="container-title">
-                                        <span> Areas responsables </span>                                        
-                                    </mat-card-title>
-                                </mat-card-header>
-                            </mat-card>
-
                             <div class="container-expansion2__container-form" >
+                                <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 5px;">
+                                    <mat-card-header>
+                                        <mat-card-title class="container-title">
+                                            <span> Areas responsables </span>                                        
+                                        </mat-card-title>
+                                    </mat-card-header>
+                                </mat-card>
+
+                            
                                 <form [formGroup]="areaForm" class="container-expansion2__form"
                                     (click)="saveResponsibleArea()"
-                                    >              
+                                    >             
                
                                     <mat-form-field  class="container-expansion2__form--input"
                                         appearance="outline">
                                         <mat-label>Area responsable</mat-label>
                                         <input type="text" autocomplete="off" formControlName="name"  placeholder="Escribe..."
                                         matInput  />
-                                        <mat-error>* Campo requerido</mat-error>
+                                        <mat-error *ngIf="areaForm.controls['name'].errors">
+                                            Campo <strong>requerido.</strong>
+                                        </mat-error>
                                     </mat-form-field>
 
                                     <mat-form-field class="container-expansion2__form--input"
@@ -170,7 +173,9 @@
                                         <mat-label>Correo</mat-label>
                                         <input type="text" autocomplete="off" formControlName="email" placeholder="Escribe..."
                                         matInput />
-                                        <mat-error>* Campo requerido</mat-error>
+                                        <mat-error *ngIf="areaForm.controls['email'].errors">
+                                            Campo <strong>requerido.</strong>
+                                        </mat-error>
                                     </mat-form-field>
 
                                     <button type="submit" aria-label="saveDataDifusion" mat-button class="container-expansion2__form--btn"
@@ -181,25 +186,43 @@
                                 </form>
                             </div>
                             
-                            <mat-card class="mat-elevation-z0 container-expansion2__content-card">
-                                <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-                                <mat-card-header class="container-expansion1__content-card--header">
+                            <div>                            
+                                
+                                    <div class="container-table" *ngIf="areaResponsable$ | async " >
+                                      <table mat-table [dataSource]="historyMobilDataSource" class="mat-elevation-z8">
+                                
+                                        <ng-container matColumnDef="name">
+                                          <th mat-header-cell *matHeaderCellDef class="table__cell theader">Area responsable</th>
+                                          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name ? element.name : '---'}}
+                                          </td>
+                                        </ng-container>
+                                
+                                        <ng-container matColumnDef="email">
+                                          <th mat-header-cell *matHeaderCellDef class="table__cell theader">Email</th>
+                                          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.email ? element.email : '---'}}
+                                          </td>
+                                        </ng-container>
 
-                                </mat-card-header>
-                                <mat-card-content class="container-expansion1__content-card-content">
-                                    <div role="list" *ngFor="let result of listResponsibleAreasArray;let i=index">
-                                        <div class="item-list">
-                                            <span>{{result.name}}</span>
-                                            <span>{{result.email}}</span>
-                                            <span>
-                                                <button mat-icon-button aria-label="deletelistResult" (click)="deleteListResponsibleArea(i)" >
+                                        <ng-container matColumnDef="actions" stickyEnd>
+                                            <th mat-header-cell *matHeaderCellDef class="table__cell theader">
+                                              Accion
+                                            </th>
+                                            <td mat-cell *matCellDef="let element" class="table__cell">
+                                                <button mat-icon-button aria-label="deletelistResult" (click)="deleteListResponsibleArea(element)" >
                                                     <mat-icon style="color: #828282">delete</mat-icon>
                                                 </button>
-                                            </span>
-                                        </div>
+                                            </td>
+                                          </ng-container>
+                                
+                                        <tr mat-header-row *matHeaderRowDef="historyMobilDisplayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: historyMobilDisplayedColumns;"></tr>
+                                      </table>
+                                     
                                     </div>
-                                </mat-card-content>
-                            </mat-card>                
+                                    <mat-paginator #historyMobilPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+                                    </mat-paginator>
+                            </div>
+                                           
                         </mat-card-content>    
                     </div>
                 </div>         
